fix: corrected the visibility of the element

--- a/style/block/order.scss
+++ b/style/block/order.scss
@@ -176,6 +176,7 @@
         height: 0;
         transition: ease-in-out 0.2s;
         margin-right: 2px;
+        z-index: 5;
 
         &::-webkit-scrollbar {
             background: $color-QM;
